More spacing issues.

--- a/sites/mainframe50/css/scss/_ww_cci.scss
+++ b/sites/mainframe50/css/scss/_ww_cci.scss
@@ -101,10 +101,12 @@
 }
 
 #ibm-content p {
-  padding-bottom: 10px; }
+  padding-bottom: 10px;
+}
 
-#ibm-content p.ibm-last{
-  padding-bottom: 30px; }
+#ibm-content p.ibm-last {
+  padding-bottom: 30px;
+}
 
 #ibm-content p.ibm_cci-intro {
 	font-family: $LubalinBook;
